--- a/fav-band/css/style.css
+++ b/fav-band/css/style.css
@@ -21,3 +21,8 @@ img {
     width: 50%;
     display: inline;
 }
+form {
+    background-color: aquamarine;
+    padding: 5px;
+    margin: 20px;
+}
