add content with h1 and paragraph tag on index page

--- a/fav-band/css/style.css
+++ b/fav-band/css/style.css
@@ -20,6 +20,15 @@ img {
 .img-top {
     width: 50%;
     display: inline;
+    float: left;
+    background-color: greenyellow;
+    height: 30px;
+}
+.img-top1 {
+    width: 50%;
+    display: inline;
+    float: left;
+    background-color: greenyellow;
 }
 form {
     background-color: aquamarine;
