add styling to home page

--- a/fav-band/css/style.css
+++ b/fav-band/css/style.css
@@ -10,3 +10,35 @@ form {
     margin: 20px;
 }
 
+.top-level {
+    background-color: darkgoldenrod;
+    text-align: center;
+    text-decoration: solid;
+    text-transform: capitalize;
+    padding: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.nav-below1 {
+    background-color: aquamarine;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.container {
+    background-color: aquamarine;
+}
+.card {
+    float: inline-end;
+}
+
+h1 {
+    text-align: center;
+    background-color: chocolate;
+    text-decoration: solid;
+    text-transform: capitalize;
+    text-shadow: 5px;
+}
+footer {
+
+    padding: 15px;
+    text-shadow: 10px;
+}
